tests/hopix/hopix/typechecker/good/idapp.hopix
val zero = (\['a](x : 'a) => (x : 'a))[int](0)
